Numerous changes in move to new version of xMod
git-svn-id: file:///project/repositories/svn2/schenker/trunk@251 7437ebc0-4e4f-0410-a91c-e60b824a4b0e